# testrail-mcp

./: Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml  test_mcp.py
.github/workflows/: python-publish.yml
testrail_mcp/: __init__.py  __main__.py  config.py  main.py  mcp_server.py  testrail_client.py
